--- a/app/styles/base/_type--font.sass
+++ b/app/styles/base/_type--font.sass
@@ -1,2 +1,8 @@
 .is__text--Avenir
   font-family: "Avenir Next"
+
+.is__text--Proxima
+  font-family: "Proxima Nova"
+
+.is__text--Oswald
+  font-family: "Oswald"
