--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -24,3 +24,5 @@
 @import "pages/directive.background";
 @import "pages/nav";
 @import "pages/directive.logo";
+@import "pages/color-piano.sass";
+@import "pages/text-piano.sass";
