--- a/app/views/pages/hello.html
+++ b/app/views/pages/hello.html
@@ -1,4 +1,28 @@
-<background rotate
-  class="flex flex__item"
-  message:content="i create art so you can see your own borders."
-  message:class="is__text--c-black"></background>
+<div class="flex flex--direction--col">
+  <div class="colors-piano-key is10vh isw10rem is__background--c-{{problem}}" ng-repeat="problem in data.colors" ng-click="data.backgroundColor = problem" ng-mouseover="data.backgroundColor = problem">
+  </div>
+</div>
+
+
+<!--POSTER-->
+<div style="overflow-x: hidden; overflow-y: scroll;" class="is100vw is90vh p50 is__background--c-{{data.backgroundColor}}"><h1 ng-style="{'font-size': attrs.messageFont}" class="is__text--c-{{data.messageColor}} is__text--{{data.messageFont}}">{{data.message}}</h1></div>
+
+<!-- COLORPIANO data.messageColor -->
+<div class="flex flex--direction--col">
+  <div class="colors-piano-key is10vh isw10rem is__background--c-{{problem}}" ng-repeat="problem in data.colors" ng-click="data.messageColor = problem" ng-mouseover="data.messageColor = problem">
+
+  </div>
+</div>
+
+<!-- COLORPIANO data.backgroundColor -->
+<div class="flex flex--direction--col">
+  <div class="colors-piano-key is10vh isw10rem is__background--c-{{problem}}" ng-repeat="problem in data.colors" ng-click="data.backgroundColor = problem" ng-mouseover="data.backgroundColor = problem">
+  </div>
+</div>
+
+<!-- TEXTPIANO data.messageFont -->
+<div class="flex flex--direction--col">
+  <div class="text-piano-key is10vh isw10rem is__background--c-{{problem}}" ng-repeat="problem in data.colors" ng-click="data.backgroundColor = problem" ng-mouseover="data.backgroundColor = problem">
+  </div>
+</div>
+
