--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,6 +20,7 @@
 @import "base/type--appearance";
 // adds font standards;
 @import "base/type--font";
+@import "base/app";
 //adds background directive
 @import "pages/directive.background";
 @import "pages/nav";
