--- a/app/styles/base/_type--font.sass
+++ b/app/styles/base/_type--font.sass
@@ -1,8 +1,17 @@
-.is__text--Avenir
+.is__text--AvenirNext
   font-family: "Avenir Next"
 
-.is__text--Proxima
-  font-family: "Proxima Nova"
+.is__text--Vollkorn
+  font-family: "Vollkorn"
+
+.is__text--Crimson
+  font-family: "Crimson"
+
+.is__text--OldStandard
+  font-family: "Old Standard"
+
+.is__text--Rokkitt
+  font-family: "Rokkitt"
 
 .is__text--Oswald
   font-family: "Oswald"
