--- a/app/styles/piano/_color-piano.sass
+++ b/app/styles/piano/_color-piano.sass
@@ -1,6 +1,9 @@
 .colors-piano
+  @extend .flex
+
 .colors-piano-key
   transition: .3s all ease-out
+  @extend .piano-key
 
   &:hover
     transition: .3s all ease-out
