recorded first poetry slam with it

--- a/app/styles/piano/_poster-piano.sass
+++ b/app/styles/piano/_poster-piano.sass
@@ -1,6 +1,19 @@
-.poster-canvas--textarea
+.poster-canvas
+
+.pcTextarea
   outline: none
   border: none
   background: none
   width: 105vw
-  padding-right: 12vw
+  padding-right: 14vw
+  padding-left: 9vw
+  line-height: 1.61em
+
+.pcTextarea__size--small
+  font-size: 10vh
+
+.pcTextarea__size--regular
+  font-size: 13vh
+
+.pcTextarea__size--large
+  font-size: 17vh
