--- a/app/views/pages/posterpiano-alt.html
+++ b/app/views/pages/posterpiano-alt.html
@@ -1,9 +1,17 @@
 <section class="grid-poster-canvas">
+
+    <!-- COLORPIANO data.messageBackground -->
     <div class="grid-poster-piano">
         <div flex="yes col" class="colors-piano flex flex--direction--col">
             <div class="colors-piano-key isw10rem is__background--c-{{color}}" ng-repeat="color in data.colors" ng-click="data.backgroundColor = color" ng-mouseover="data.backgroundColor = color">
             </div>
         </div>
+    </div>
+
+
+    <!--POSTERCANVAS-->
+    <div style="overflow-x: hidden; overflow-y: scroll;" class="poster--canvas is100vw is__background--c-{{data.backgroundColor}}">
+        <textarea class="pcTextarea pcTextarea__size--small is__text--giga is__text--c-{{data.messageColor}} is90vh is__text--{{data.messageFont}} ">{{data.message}}</textarea></h1>
     </div>
 
     <!-- TEXTPIANO data.messageFont -->
@@ -15,11 +23,6 @@
         </div>
     </div>
 
-    <!--POSTERCANVAS-->
-    <div style="overflow-x: hidden; overflow-y: scroll;" class="poster--canvas is100vw is__background--c-{{data.backgroundColor}}">
-        <textarea class="pcTextarea pcTextarea__size--small is__text--giga is__text--c-{{data.messageColor}} is90vh is__text--{{data.messageFont}} ">{{data.message}}</textarea></h1>
-    </div>
-
     <!-- COLORPIANO data.messageColor -->
     <div class="flex flex--direction--col">
         <div class="colors-piano-key isw10rem is__background--c-{{color}}" ng-repeat="color in data.colors" ng-click="data.messageColor = color" ng-mouseover="data.messageColor = color">
@@ -27,9 +30,4 @@
         </div>
     </div>
 
-    <!-- COLORPIANO data.backgroundColor -->
-    <div class="flex flex--direction--col">
-        <div class="colors-piano-key isw10rem is__background--c-{{color}}" ng-repeat="color in data.colors" ng-click="data.backgroundColor = color" ng-mouseover="data.backgroundColor = color">
-        </div>
-    </div>
 </section>
