switched to contenteditable from testarea thank god

--- a/app/views/pages/posterpiano-alt.html
+++ b/app/views/pages/posterpiano-alt.html
@@ -11,7 +11,7 @@
 
     <!--POSTERCANVAS-->
     <div style="overflow-x: hidden; overflow-y: scroll;" class="poster--canvas is100vw is__background--c-{{data.backgroundColor}}">
-        <textarea class="pcTextarea pcTextarea__size--small is__text--giga is__text--c-{{data.messageColor}} is90vh is__text--{{data.messageFont}} ">{{data.message}}</textarea></h1>
+        <div contenteditable="true" class="pcTextarea pcTextarea__size--small is__text--giga is__text--c-{{data.messageColor}} is90vh is__text--{{data.messageFont}} ">{{data.message}}</div></h1>
     </div>
 
     <!-- TEXTPIANO data.messageFont -->
